# PN_Lab_example

./: .gitignore  1  5  CMakeLists.txt  README.md  README.txt  main.c  project.config
01_static_libs/: makefile  second.c
02_shared_libs/: makefile  run.sh
03_overwriting_library/: elo  elo.cpp  first.h  makefile  run.sh  second.c
LabSpr/: sprawozdanie.tex
Proj/: konspekt.tex
Proj/rozwiazaneZadania/: 1a  makefile
Proj/rozwiazaneZadania/dynamic_loading/: makefile
Proj/rozwiazaneZadania/ld_preload/: run.sh
Proj/rozwiazaneZadania/plugin/: main.c  makefile
Proj/rozwiazaneZadania/shared_libs/: first.c  run.sh  second.h
Proj/rozwiazaneZadania/static_libs_lock/: add2num.c  anotherfunction.c  notusedfunction.c  staticlibraryusage.c
Proj/zadania/: .gitignore  1b  3
Proj/zadania/binutils/: relocatableFile.c
Proj/zadania/dynamic_loading/: main.c
Proj/zadania/ld_preload/: run.sh  second.c
Proj/zadania/plugin/: makefile
Proj/zadania/static_libs/: main.c
Proj/zadania/static_libs_lock/: dostuff.c  run.sh
argParseSetup/: argParseSetup.c  argParseSetup.h
dynamic_loading/: foo.c  main.c  makefile
konspekt/: ]  konspekt.aux  konspekt.tex  konspekt.toc
konspekt/auto/: konspekt.el
ld_preload/: run.sh
logSetup/: logSetup.h
others/logSetup/: logSetup.h
plugin/: main.c  makefile  plugindrugi.c  pluginpierwszy.c  plugintrzeci.c
plugin/PluginManager/: PluginLoader.c  PluginLoader.h  PluginManager.c  PluginManager.h
plugin/plugin/: decode.c  upper.c
shared_libs/: run.sh
static_libs/: run.sh
static_libs_lock/: run.sh  staticlibrary.sh
(+51 files in other folders)
